<resources>
    <string name="app_name">ChanceBalancer</string>
    <string name="name">Name</string>
    <string name="attack">Attack</string>
    <string name="chance">chance</string>
    <string name="damage">damage</string>
    <string name="defence">Defence</string>
    <string name="amount">amount</string>
    <string name="times">times</string>
    <string name="health">Health</string>
    <string name="armor">armor</string>
    <string name="add">add</string>
    <string name="ok">OK</string>
    <string name="save_name">saved_entities</string>
    <string name="delete">delete</string>
    <string name="wipe">wipe</string>
    <string name="unique">unique</string>
</resources>
